feat: implement add, update, get, delete employees
